--- a/views/books/index.ejs
+++ b/views/books/index.ejs
@@ -4,9 +4,9 @@
   <br><br>
     <% if (user.books < 1) { %>
     <span class="message">
-    You don't have any books yet.<br><br>
+    <p>You don't have any books yet.</p><br><br>
     <h1>😢</h1><br>
-    <a href="/books/search">Find a book</a> to add to your list!
+    <p><a href="/books/search">Find a book</a> to add to your list!</p>
     </span>
     <% } else { %>
         <table id="list">
