--- a/views/books/search.ejs
+++ b/views/books/search.ejs
@@ -1,6 +1,6 @@
 <%- include('../partials/header') %>
 
-  <h2>Find a book</h2><br>
+  <h2>Find a book!</h2><br>
     <form action="/books/search/api" method="POST">
         <input type="text" name="query" autocomplete="off" placeholder="by title...">
         <br><br>
