--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -235,7 +235,7 @@ h3 {
   background-color: rgb(95, 70, 39);
   border-radius: 1vmin;
   border-style: solid;
-  border-color: rgb(125, 93, 54)
+  border-color: rgb(125, 93, 54);
   border-width: .3vmin;
 }
 
