--- a/views/partials/header.ejs
+++ b/views/partials/header.ejs
@@ -3,6 +3,14 @@
     <head>
         <meta charset="UTF-8" />
         <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+        <meta property="og:title" content="/shelf" />
+        <meta property="og:type" content="website" />
+        <meta property="og:url" content="https://shelftastic.herokuapp.com/" />
+        <meta property="og:image" content="https://i.imgur.com/FhGg3s1.png" />
+        <meta
+        name="description"
+        content="A NodeJS/ExpressJS web app that allows you to easily keep track of books."
+        />
         <link rel="stylesheet" href="/stylesheets/style.css" />
         <link href="https://fonts.googleapis.com/css?family=Great+Vibes&display=swap" rel="stylesheet">
         <link rel="shortcut icon" href="/images/favicon.ico" type="image/x-icon">
@@ -11,7 +19,7 @@
     <body>
         <nav>
             <div class="logo">
-                <a href="/"><img src="/images/icon.png" id="navlogo"></a>
+                <a href="/"><img src="/images/logo.png" id="navlogo"></a>
             </div>
             <div class="links">
                 <a href="/books/search" class="navlink">find books</a>
